app/styles/main.css
body {
  background: #fafafa;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #333;
  margin: 0px;
}

note-list {
  overflow: auto;
  margin-top: 4em;
}

core-toolbar {
  background: #4CAF50;
  color: white;
  font-family: sans-serif;
}

